# tbamud

./: .clang-format  .gitignore  README.md  configure
docker/: Dockerfile  docker-compose.yml
lib/text/: language.fr  language.fr.json
python/: enumerate-rooms.py  generate-translation.py
src/: CMakeLists.txt  act.comm.c  act.h  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  aedit.c  asciimap.c  asciimap.h  ban.c  ban.h  boards.c  boards.h  bsd-snprintf.c  castle.c  cedit.c  circle-text-dump.c  class.c  class.h  comm.c  comm.h  conf.h.in.cmake  config.c  config.h  constants.c  constants.h  db.c  db.h  dg_comm.c  dg_db_scripts.c  dg_event.c  dg_event.h  dg_handler.c  dg_misc.c  dg_mobcmd.c  dg_objcmd.c  (+93 more)
src/util/: sign.c
